--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-minimal-pie-chart": "^4.2.0",
     "react-router-dom": "^5.0.0"
   },
   "scripts": {
