--- a/manifest.json
+++ b/manifest.json
@@ -43,7 +43,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/?source=pwa",
+  "start_url": "bomb-finder/?source=pwa",
   "display": "standalone",
   "theme_color": "#3367d6",
   "background_color": "#333333",
