--- a/manifest.json
+++ b/manifest.json
@@ -44,8 +44,9 @@
     }
   ],
   "start_url": "bomb-finder/?source=pwa",
-  "display": "standalone",
+  "scope": "/bomb-finder/",
+  "display": "fullscreen",
   "theme_color": "#3367d6",
-  "background_color": "#333333",
+  "background_color": "#000000",
   "orientation": "portrait"
 }
